--- a/package.json
+++ b/package.json
@@ -74,61 +74,61 @@
   },
   "homepage": "https://github.com/H4ad/serverless-adapter#readme",
   "devDependencies": {
-    "@apollo/server": "^4.7.1",
-    "@azure/functions": "^3.5.1",
+    "@apollo/server": "4.9.5",
+    "@azure/functions": "3.5.1",
     "@deepkit/app": "1.0.1-alpha.98",
     "@deepkit/framework": "1.0.1-alpha.99",
     "@deepkit/http": "1.0.1-alpha.98",
     "@deepkit/workflow": "1.0.1-alpha.97",
-    "@google-cloud/functions-framework": "^3.2.0",
-    "@hapi/hapi": "^21.3.2",
-    "@microsoft/api-documenter": "7.22.4",
-    "@microsoft/api-extractor": "7.34.8",
-    "@microsoft/api-extractor-model": "7.26.8",
+    "@google-cloud/functions-framework": "3.3.0",
+    "@hapi/hapi": "21.3.2",
+    "@microsoft/api-documenter": "7.23.15",
+    "@microsoft/api-extractor": "7.39.0",
+    "@microsoft/api-extractor-model": "7.28.3",
     "@microsoft/tsdoc": "0.14.2",
-    "@rushstack/node-core-library": "3.58.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^9.0.2",
-    "@trpc/server": "^10.29.1",
-    "@types/aws-lambda": "^8.10.115",
-    "@types/body-parser": "^1.19.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/koa": "^2.13.6",
+    "@rushstack/node-core-library": "3.62.0",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/exec": "6.0.3",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "9.2.5",
+    "@trpc/server": "10.44.1",
+    "@types/aws-lambda": "8.10.130",
+    "@types/body-parser": "1.19.5",
+    "@types/cors": "2.8.17",
+    "@types/express": "4.17.21",
+    "@types/koa": "2.13.12",
     "@types/node": "18.16.5",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "@vitest/coverage-c8": "^0.31.0",
-    "body-parser": "^1.20.2",
-    "codecov": "^3.8.3",
-    "commitizen": "^4.3.0",
-    "cors": "^2.8.5",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-tsdoc": "^0.2.17",
-    "express": "^4.18.2",
-    "fastify": "^4.17.0",
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^3.24.1",
-    "glob": "^10.2.2",
-    "husky": "^8.0.3",
-    "koa": "^2.14.2",
-    "prettier": "~2.8.8",
-    "semantic-release": "~21.0.2",
-    "stream-mock": "~2.0.5",
-    "supertest": "~6.3.3",
-    "ts-node": "~10.9.1",
-    "typedoc": "~0.24.6",
-    "typescript": "~4.9.5",
-    "vite": "^4.3.5",
-    "vitest": "^0.31.0"
+    "@types/supertest": "6.0.1",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/parser": "6.15.0",
+    "@vitest/coverage-v8": "1.1.0",
+    "body-parser": "1.20.2",
+    "codecov": "3.8.3",
+    "commitizen": "4.3.0",
+    "cors": "2.8.5",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "5.1.1",
+    "eslint-plugin-tsdoc": "0.2.17",
+    "express": "4.18.2",
+    "fastify": "4.25.1",
+    "firebase-admin": "11.8.0",
+    "firebase-functions": "3.24.1",
+    "glob": "10.3.10",
+    "husky": "8.0.3",
+    "koa": "2.14.2",
+    "prettier": "3.1.1",
+    "semantic-release": "22.0.12",
+    "stream-mock": "2.0.5",
+    "supertest": "6.3.3",
+    "ts-node": "10.9.2",
+    "typedoc": "0.25.4",
+    "typescript": "~5.3.3",
+    "vite": "5.0.10",
+    "vitest": "1.1.0"
   },
   "peerDependencies": {
     "@apollo/server": ">= 4.0.0",
