--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,10 @@ jobs:
         run: npm ci
         if: ${{ steps.release.outputs.release_created }}
 
+      - name: Get Coverage Info
+        if: ${{ steps.release.outputs.release_created }}
+        run: npm run coverage
+
       - name: NPM Publish
         run: npm publish
         if: ${{ steps.release.outputs.release_created }}
