--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -19,19 +19,19 @@
   },
   "dependencies": {
     "@h4ad/serverless-adapter": "file:../h4ad-serverless-adapter-0.0.0-development.tgz",
-    "@swc/cli": "^0.1.59",
-    "@swc/core": "^1.3.24",
-    "@vendia/serverless-express": "^4.10.1",
-    "benchmark": "^2.1.4",
-    "express": "^4.18.2",
-    "serverless-http": "^3.1.0",
-    "stream-mock": "^2.0.5"
+    "@swc/cli": "0.1.63",
+    "@swc/core": "1.3.101",
+    "@vendia/serverless-express": "4.12.6",
+    "benchmark": "2.1.4",
+    "express": "4.18.2",
+    "serverless-http": "3.2.0",
+    "stream-mock": "2.0.5"
   },
   "devDependencies": {
-    "@types/benchmark": "^2.1.2",
-    "aws-lambda": "^1.0.7",
-    "chokidar": "^3.5.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "@types/benchmark": "2.1.5",
+    "aws-lambda": "1.0.7",
+    "chokidar": "3.5.3",
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3"
   }
 }
