--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,18 @@ jobs:
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN_GITHUB }}
           release-type: node
+          changelog-types: >
+            [
+              { "type": "feat", "section": "Features", "hidden": false },
+              { "type": "fix", "section": "Bug Fixes", "hidden": false },
+              { "type": "docs", "section": "Documentation", "hidden": false },
+              { "type": "build", "section": "Build Related", "hidden": false },
+              { "type": "chore", "section": "Chores", "hidden": false },
+              { "type": "perf", "section": "Performance Improvements", "hidden": false },
+              { "type": "ci", "section": "CI", "hidden": false },
+              { "type": "refactor", "section": "Refactoring", "hidden": false },
+              { "type": "test", "section": "Tests", "hidden": false }
+            ]
 
       - name: Checkout Code
         if: ${{ steps.release.outputs.release_created }}
