--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,9 +2,23 @@ name: CodeQL
 
 on:
   push:
+    paths:
+      - 'src/**'
+      - 'package-lock.json'
+      - 'package.json'
+      - 'tsconfig.json'
+      - 'tsconfig.*.json'
+      - 'vite.config.ts'
     branches:
       - main
   pull_request:
+    paths:
+      - 'src/**'
+      - 'package-lock.json'
+      - 'package.json'
+      - 'tsconfig.json'
+      - 'tsconfig.*.json'
+      - 'vite.config.ts'
     branches:
       - main
   schedule:
