--- a/tsconfig.doc.json
+++ b/tsconfig.doc.json
@@ -1,5 +1,11 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "emitDeclarationOnly": true,
+    "noEmit": false,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true
+  },
   "include": ["src/**/*.ts", "src/index.doc.ts"],
   "exclude": []
 }
