--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Run REST APIs and other web applications using your existing Node.js application framework (NestJS, Express, Koa, Hapi, Fastify and many others), on top of AWS, Azure, Digital Ocean and many other clouds.",
   "type": "module",
   "main": "./lib/index.cjs",
-  "module": "./lib/index.js",
-  "types": "./lib/index.d.cts",
+  "module": "./lib/index.mjs",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib/**/*"
   ],
@@ -223,7 +223,7 @@
     ".": {
       "import": {
         "types": "./lib/index.d.ts",
-        "default": "./lib/index.js"
+        "default": "./lib/index.mjs"
       },
       "require": {
         "types": "./lib/index.d.cts",
@@ -233,7 +233,17 @@
     "./adapters/apollo-server": {
       "import": {
         "types": "./lib/adapters/apollo-server/index.d.ts",
-        "default": "./lib/adapters/apollo-server/index.js"
+        "default": "./lib/adapters/apollo-server/index.mjs"
+      },
+      "require": {
+        "types": "./lib/adapters/apollo-server/index.d.cts",
+        "default": "./lib/adapters/apollo-server/index.cjs"
+      }
+    },
+    "./lib/adapters/apollo-server": {
+      "import": {
+        "types": "./lib/adapters/apollo-server/index.d.ts",
+        "default": "./lib/adapters/apollo-server/index.mjs"
       },
       "require": {
         "types": "./lib/adapters/apollo-server/index.d.cts",
@@ -243,7 +253,17 @@
     "./adapters/aws": {
       "import": {
         "types": "./lib/adapters/aws/index.d.ts",
-        "default": "./lib/adapters/aws/index.js"
+        "default": "./lib/adapters/aws/index.mjs"
+      },
+      "require": {
+        "types": "./lib/adapters/aws/index.d.cts",
+        "default": "./lib/adapters/aws/index.cjs"
+      }
+    },
+    "./lib/adapters/aws": {
+      "import": {
+        "types": "./lib/adapters/aws/index.d.ts",
+        "default": "./lib/adapters/aws/index.mjs"
       },
       "require": {
         "types": "./lib/adapters/aws/index.d.cts",
@@ -253,7 +273,17 @@
     "./adapters/azure": {
       "import": {
         "types": "./lib/adapters/azure/index.d.ts",
-        "default": "./lib/adapters/azure/index.js"
+        "default": "./lib/adapters/azure/index.mjs"
+      },
+      "require": {
+        "types": "./lib/adapters/azure/index.d.cts",
+        "default": "./lib/adapters/azure/index.cjs"
+      }
+    },
+    "./lib/adapters/azure": {
+      "import": {
+        "types": "./lib/adapters/azure/index.d.ts",
+        "default": "./lib/adapters/azure/index.mjs"
       },
       "require": {
         "types": "./lib/adapters/azure/index.d.cts",
@@ -263,7 +293,17 @@
     "./adapters/digital-ocean": {
       "import": {
         "types": "./lib/adapters/digital-ocean/index.d.ts",
-        "default": "./lib/adapters/digital-ocean/index.js"
+        "default": "./lib/adapters/digital-ocean/index.mjs"
+      },
+      "require": {
+        "types": "./lib/adapters/digital-ocean/index.d.cts",
+        "default": "./lib/adapters/digital-ocean/index.cjs"
+      }
+    },
+    "./lib/adapters/digital-ocean": {
+      "import": {
+        "types": "./lib/adapters/digital-ocean/index.d.ts",
+        "default": "./lib/adapters/digital-ocean/index.mjs"
       },
       "require": {
         "types": "./lib/adapters/digital-ocean/index.d.cts",
@@ -273,7 +313,17 @@
     "./adapters/dummy": {
       "import": {
         "types": "./lib/adapters/dummy/index.d.ts",
-        "default": "./lib/adapters/dummy/index.js"
+        "default": "./lib/adapters/dummy/index.mjs"
+      },
+      "require": {
+        "types": "./lib/adapters/dummy/index.d.cts",
+        "default": "./lib/adapters/dummy/index.cjs"
+      }
+    },
+    "./lib/adapters/dummy": {
+      "import": {
+        "types": "./lib/adapters/dummy/index.d.ts",
+        "default": "./lib/adapters/dummy/index.mjs"
       },
       "require": {
         "types": "./lib/adapters/dummy/index.d.cts",
@@ -283,7 +333,17 @@
     "./adapters/huawei": {
       "import": {
         "types": "./lib/adapters/huawei/index.d.ts",
-        "default": "./lib/adapters/huawei/index.js"
+        "default": "./lib/adapters/huawei/index.mjs"
+      },
+      "require": {
+        "types": "./lib/adapters/huawei/index.d.cts",
+        "default": "./lib/adapters/huawei/index.cjs"
+      }
+    },
+    "./lib/adapters/huawei": {
+      "import": {
+        "types": "./lib/adapters/huawei/index.d.ts",
+        "default": "./lib/adapters/huawei/index.mjs"
       },
       "require": {
         "types": "./lib/adapters/huawei/index.d.cts",
@@ -293,7 +353,17 @@
     "./frameworks/apollo-server": {
       "import": {
         "types": "./lib/frameworks/apollo-server/index.d.ts",
-        "default": "./lib/frameworks/apollo-server/index.js"
+        "default": "./lib/frameworks/apollo-server/index.mjs"
+      },
+      "require": {
+        "types": "./lib/frameworks/apollo-server/index.d.cts",
+        "default": "./lib/frameworks/apollo-server/index.cjs"
+      }
+    },
+    "./lib/frameworks/apollo-server": {
+      "import": {
+        "types": "./lib/frameworks/apollo-server/index.d.ts",
+        "default": "./lib/frameworks/apollo-server/index.mjs"
       },
       "require": {
         "types": "./lib/frameworks/apollo-server/index.d.cts",
@@ -303,7 +373,17 @@
     "./frameworks/body-parser": {
       "import": {
         "types": "./lib/frameworks/body-parser/index.d.ts",
-        "default": "./lib/frameworks/body-parser/index.js"
+        "default": "./lib/frameworks/body-parser/index.mjs"
+      },
+      "require": {
+        "types": "./lib/frameworks/body-parser/index.d.cts",
+        "default": "./lib/frameworks/body-parser/index.cjs"
+      }
+    },
+    "./lib/frameworks/body-parser": {
+      "import": {
+        "types": "./lib/frameworks/body-parser/index.d.ts",
+        "default": "./lib/frameworks/body-parser/index.mjs"
       },
       "require": {
         "types": "./lib/frameworks/body-parser/index.d.cts",
@@ -313,7 +393,17 @@
     "./frameworks/cors": {
       "import": {
         "types": "./lib/frameworks/cors/index.d.ts",
-        "default": "./lib/frameworks/cors/index.js"
+        "default": "./lib/frameworks/cors/index.mjs"
+      },
+      "require": {
+        "types": "./lib/frameworks/cors/index.d.cts",
+        "default": "./lib/frameworks/cors/index.cjs"
+      }
+    },
+    "./lib/frameworks/cors": {
+      "import": {
+        "types": "./lib/frameworks/cors/index.d.ts",
+        "default": "./lib/frameworks/cors/index.mjs"
       },
       "require": {
         "types": "./lib/frameworks/cors/index.d.cts",
@@ -323,7 +413,17 @@
     "./frameworks/deepkit": {
       "import": {
         "types": "./lib/frameworks/deepkit/index.d.ts",
-        "default": "./lib/frameworks/deepkit/index.js"
+        "default": "./lib/frameworks/deepkit/index.mjs"
+      },
+      "require": {
+        "types": "./lib/frameworks/deepkit/index.d.cts",
+        "default": "./lib/frameworks/deepkit/index.cjs"
+      }
+    },
+    "./lib/frameworks/deepkit": {
+      "import": {
+        "types": "./lib/frameworks/deepkit/index.d.ts",
+        "default": "./lib/frameworks/deepkit/index.mjs"
       },
       "require": {
         "types": "./lib/frameworks/deepkit/index.d.cts",
@@ -333,7 +433,17 @@
     "./frameworks/express": {
       "import": {
         "types": "./lib/frameworks/express/index.d.ts",
-        "default": "./lib/frameworks/express/index.js"
+        "default": "./lib/frameworks/express/index.mjs"
+      },
+      "require": {
+        "types": "./lib/frameworks/express/index.d.cts",
+        "default": "./lib/frameworks/express/index.cjs"
+      }
+    },
+    "./lib/frameworks/express": {
+      "import": {
+        "types": "./lib/frameworks/express/index.d.ts",
+        "default": "./lib/frameworks/express/index.mjs"
       },
       "require": {
         "types": "./lib/frameworks/express/index.d.cts",
@@ -343,7 +453,17 @@
     "./frameworks/fastify": {
       "import": {
         "types": "./lib/frameworks/fastify/index.d.ts",
-        "default": "./lib/frameworks/fastify/index.js"
+        "default": "./lib/frameworks/fastify/index.mjs"
+      },
+      "require": {
+        "types": "./lib/frameworks/fastify/index.d.cts",
+        "default": "./lib/frameworks/fastify/index.cjs"
+      }
+    },
+    "./lib/frameworks/fastify": {
+      "import": {
+        "types": "./lib/frameworks/fastify/index.d.ts",
+        "default": "./lib/frameworks/fastify/index.mjs"
       },
       "require": {
         "types": "./lib/frameworks/fastify/index.d.cts",
@@ -353,7 +473,17 @@
     "./frameworks/hapi": {
       "import": {
         "types": "./lib/frameworks/hapi/index.d.ts",
-        "default": "./lib/frameworks/hapi/index.js"
+        "default": "./lib/frameworks/hapi/index.mjs"
+      },
+      "require": {
+        "types": "./lib/frameworks/hapi/index.d.cts",
+        "default": "./lib/frameworks/hapi/index.cjs"
+      }
+    },
+    "./lib/frameworks/hapi": {
+      "import": {
+        "types": "./lib/frameworks/hapi/index.d.ts",
+        "default": "./lib/frameworks/hapi/index.mjs"
       },
       "require": {
         "types": "./lib/frameworks/hapi/index.d.cts",
@@ -363,7 +493,17 @@
     "./frameworks/koa": {
       "import": {
         "types": "./lib/frameworks/koa/index.d.ts",
-        "default": "./lib/frameworks/koa/index.js"
+        "default": "./lib/frameworks/koa/index.mjs"
+      },
+      "require": {
+        "types": "./lib/frameworks/koa/index.d.cts",
+        "default": "./lib/frameworks/koa/index.cjs"
+      }
+    },
+    "./lib/frameworks/koa": {
+      "import": {
+        "types": "./lib/frameworks/koa/index.d.ts",
+        "default": "./lib/frameworks/koa/index.mjs"
       },
       "require": {
         "types": "./lib/frameworks/koa/index.d.cts",
@@ -373,7 +513,17 @@
     "./frameworks/lazy": {
       "import": {
         "types": "./lib/frameworks/lazy/index.d.ts",
-        "default": "./lib/frameworks/lazy/index.js"
+        "default": "./lib/frameworks/lazy/index.mjs"
+      },
+      "require": {
+        "types": "./lib/frameworks/lazy/index.d.cts",
+        "default": "./lib/frameworks/lazy/index.cjs"
+      }
+    },
+    "./lib/frameworks/lazy": {
+      "import": {
+        "types": "./lib/frameworks/lazy/index.d.ts",
+        "default": "./lib/frameworks/lazy/index.mjs"
       },
       "require": {
         "types": "./lib/frameworks/lazy/index.d.cts",
@@ -383,7 +533,17 @@
     "./frameworks/trpc": {
       "import": {
         "types": "./lib/frameworks/trpc/index.d.ts",
-        "default": "./lib/frameworks/trpc/index.js"
+        "default": "./lib/frameworks/trpc/index.mjs"
+      },
+      "require": {
+        "types": "./lib/frameworks/trpc/index.d.cts",
+        "default": "./lib/frameworks/trpc/index.cjs"
+      }
+    },
+    "./lib/frameworks/trpc": {
+      "import": {
+        "types": "./lib/frameworks/trpc/index.d.ts",
+        "default": "./lib/frameworks/trpc/index.mjs"
       },
       "require": {
         "types": "./lib/frameworks/trpc/index.d.cts",
@@ -393,7 +553,17 @@
     "./handlers/aws": {
       "import": {
         "types": "./lib/handlers/aws/index.d.ts",
-        "default": "./lib/handlers/aws/index.js"
+        "default": "./lib/handlers/aws/index.mjs"
+      },
+      "require": {
+        "types": "./lib/handlers/aws/index.d.cts",
+        "default": "./lib/handlers/aws/index.cjs"
+      }
+    },
+    "./lib/handlers/aws": {
+      "import": {
+        "types": "./lib/handlers/aws/index.d.ts",
+        "default": "./lib/handlers/aws/index.mjs"
       },
       "require": {
         "types": "./lib/handlers/aws/index.d.cts",
@@ -403,7 +573,17 @@
     "./handlers/azure": {
       "import": {
         "types": "./lib/handlers/azure/index.d.ts",
-        "default": "./lib/handlers/azure/index.js"
+        "default": "./lib/handlers/azure/index.mjs"
+      },
+      "require": {
+        "types": "./lib/handlers/azure/index.d.cts",
+        "default": "./lib/handlers/azure/index.cjs"
+      }
+    },
+    "./lib/handlers/azure": {
+      "import": {
+        "types": "./lib/handlers/azure/index.d.ts",
+        "default": "./lib/handlers/azure/index.mjs"
       },
       "require": {
         "types": "./lib/handlers/azure/index.d.cts",
@@ -413,7 +593,17 @@
     "./handlers/default": {
       "import": {
         "types": "./lib/handlers/default/index.d.ts",
-        "default": "./lib/handlers/default/index.js"
+        "default": "./lib/handlers/default/index.mjs"
+      },
+      "require": {
+        "types": "./lib/handlers/default/index.d.cts",
+        "default": "./lib/handlers/default/index.cjs"
+      }
+    },
+    "./lib/handlers/default": {
+      "import": {
+        "types": "./lib/handlers/default/index.d.ts",
+        "default": "./lib/handlers/default/index.mjs"
       },
       "require": {
         "types": "./lib/handlers/default/index.d.cts",
@@ -423,7 +613,17 @@
     "./handlers/digital-ocean": {
       "import": {
         "types": "./lib/handlers/digital-ocean/index.d.ts",
-        "default": "./lib/handlers/digital-ocean/index.js"
+        "default": "./lib/handlers/digital-ocean/index.mjs"
+      },
+      "require": {
+        "types": "./lib/handlers/digital-ocean/index.d.cts",
+        "default": "./lib/handlers/digital-ocean/index.cjs"
+      }
+    },
+    "./lib/handlers/digital-ocean": {
+      "import": {
+        "types": "./lib/handlers/digital-ocean/index.d.ts",
+        "default": "./lib/handlers/digital-ocean/index.mjs"
       },
       "require": {
         "types": "./lib/handlers/digital-ocean/index.d.cts",
@@ -433,7 +633,17 @@
     "./handlers/firebase": {
       "import": {
         "types": "./lib/handlers/firebase/index.d.ts",
-        "default": "./lib/handlers/firebase/index.js"
+        "default": "./lib/handlers/firebase/index.mjs"
+      },
+      "require": {
+        "types": "./lib/handlers/firebase/index.d.cts",
+        "default": "./lib/handlers/firebase/index.cjs"
+      }
+    },
+    "./lib/handlers/firebase": {
+      "import": {
+        "types": "./lib/handlers/firebase/index.d.ts",
+        "default": "./lib/handlers/firebase/index.mjs"
       },
       "require": {
         "types": "./lib/handlers/firebase/index.d.cts",
@@ -443,7 +653,17 @@
     "./handlers/gcp": {
       "import": {
         "types": "./lib/handlers/gcp/index.d.ts",
-        "default": "./lib/handlers/gcp/index.js"
+        "default": "./lib/handlers/gcp/index.mjs"
+      },
+      "require": {
+        "types": "./lib/handlers/gcp/index.d.cts",
+        "default": "./lib/handlers/gcp/index.cjs"
+      }
+    },
+    "./lib/handlers/gcp": {
+      "import": {
+        "types": "./lib/handlers/gcp/index.d.ts",
+        "default": "./lib/handlers/gcp/index.mjs"
       },
       "require": {
         "types": "./lib/handlers/gcp/index.d.cts",
@@ -453,7 +673,17 @@
     "./handlers/huawei": {
       "import": {
         "types": "./lib/handlers/huawei/index.d.ts",
-        "default": "./lib/handlers/huawei/index.js"
+        "default": "./lib/handlers/huawei/index.mjs"
+      },
+      "require": {
+        "types": "./lib/handlers/huawei/index.d.cts",
+        "default": "./lib/handlers/huawei/index.cjs"
+      }
+    },
+    "./lib/handlers/huawei": {
+      "import": {
+        "types": "./lib/handlers/huawei/index.d.ts",
+        "default": "./lib/handlers/huawei/index.mjs"
       },
       "require": {
         "types": "./lib/handlers/huawei/index.d.cts",
@@ -463,7 +693,17 @@
     "./resolvers/aws-context": {
       "import": {
         "types": "./lib/resolvers/aws-context/index.d.ts",
-        "default": "./lib/resolvers/aws-context/index.js"
+        "default": "./lib/resolvers/aws-context/index.mjs"
+      },
+      "require": {
+        "types": "./lib/resolvers/aws-context/index.d.cts",
+        "default": "./lib/resolvers/aws-context/index.cjs"
+      }
+    },
+    "./lib/resolvers/aws-context": {
+      "import": {
+        "types": "./lib/resolvers/aws-context/index.d.ts",
+        "default": "./lib/resolvers/aws-context/index.mjs"
       },
       "require": {
         "types": "./lib/resolvers/aws-context/index.d.cts",
@@ -473,7 +713,17 @@
     "./resolvers/callback": {
       "import": {
         "types": "./lib/resolvers/callback/index.d.ts",
-        "default": "./lib/resolvers/callback/index.js"
+        "default": "./lib/resolvers/callback/index.mjs"
+      },
+      "require": {
+        "types": "./lib/resolvers/callback/index.d.cts",
+        "default": "./lib/resolvers/callback/index.cjs"
+      }
+    },
+    "./lib/resolvers/callback": {
+      "import": {
+        "types": "./lib/resolvers/callback/index.d.ts",
+        "default": "./lib/resolvers/callback/index.mjs"
       },
       "require": {
         "types": "./lib/resolvers/callback/index.d.cts",
@@ -483,7 +733,17 @@
     "./resolvers/dummy": {
       "import": {
         "types": "./lib/resolvers/dummy/index.d.ts",
-        "default": "./lib/resolvers/dummy/index.js"
+        "default": "./lib/resolvers/dummy/index.mjs"
+      },
+      "require": {
+        "types": "./lib/resolvers/dummy/index.d.cts",
+        "default": "./lib/resolvers/dummy/index.cjs"
+      }
+    },
+    "./lib/resolvers/dummy": {
+      "import": {
+        "types": "./lib/resolvers/dummy/index.d.ts",
+        "default": "./lib/resolvers/dummy/index.mjs"
       },
       "require": {
         "types": "./lib/resolvers/dummy/index.d.cts",
@@ -493,7 +753,17 @@
     "./resolvers/promise": {
       "import": {
         "types": "./lib/resolvers/promise/index.d.ts",
-        "default": "./lib/resolvers/promise/index.js"
+        "default": "./lib/resolvers/promise/index.mjs"
+      },
+      "require": {
+        "types": "./lib/resolvers/promise/index.d.cts",
+        "default": "./lib/resolvers/promise/index.cjs"
+      }
+    },
+    "./lib/resolvers/promise": {
+      "import": {
+        "types": "./lib/resolvers/promise/index.d.ts",
+        "default": "./lib/resolvers/promise/index.mjs"
       },
       "require": {
         "types": "./lib/resolvers/promise/index.d.cts",
