--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,9 @@ jobs:
         run: npm ci
         if: ${{ steps.release.outputs.release_created }}
 
+      - name: Build
+        run: npm run build
+
       - name: Get Coverage Info
         if: ${{ steps.release.outputs.release_created }}
         run: npm run coverage
