--- a/package.json
+++ b/package.json
@@ -155,7 +155,7 @@
     "firebase-functions": ">= 4.0.0",
     "http-errors": ">= 2.0.0",
     "koa": ">= 2.5.1",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": ">= 0.1.13"
   },
   "peerDependenciesMeta": {
     "@apollo/server": {
