feat(fastify-v5): ensure support to fastify v5

--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
     "eslint-plugin-tsdoc": "0.2.17",
     "express": "4.21.1",
     "express-v5": "npm:express@5",
-    "fastify": "4.25.2",
+    "fastify": "4.28.1",
+    "fastify-v5": "npm:fastify@5",
     "firebase-admin": "11.11.1",
     "firebase-functions": "4.5.0",
     "glob": "10.3.10",
