feat(firebase): ensure support to v5 and v6 sdk

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "@deepkit/framework": "1.0.1-alpha.99",
     "@deepkit/http": "1.0.1-alpha.98",
     "@deepkit/workflow": "1.0.1-alpha.97",
-    "@google-cloud/functions-framework": "3.3.0",
+    "@google-cloud/functions-framework": "3.4.2",
     "@hapi/hapi": "21.3.2",
     "@microsoft/api-documenter": "7.23.15",
     "@microsoft/api-extractor": "7.39.0",
@@ -122,6 +122,8 @@
     "fastify-v5": "npm:fastify@5",
     "firebase-admin": "11.11.1",
     "firebase-functions": "4.5.0",
+    "firebase-functions-v5": "npm:firebase-functions@5",
+    "firebase-functions-v6": "npm:firebase-functions@6",
     "glob": "10.3.10",
     "husky": "8.0.3",
     "koa": "2.15.0",
