chore(http-deepkit): ensure is working with version 1.0.1-alpha-155

--- a/package.json
+++ b/package.json
@@ -80,10 +80,15 @@
   "devDependencies": {
     "@apollo/server": "4.10.0",
     "@azure/functions": "3.5.1",
-    "@deepkit/app": "1.0.1-alpha.98",
-    "@deepkit/framework": "1.0.1-alpha.99",
-    "@deepkit/http": "1.0.1-alpha.98",
-    "@deepkit/workflow": "1.0.1-alpha.97",
+    "@deepkit/app": "1.0.1-alpha.155",
+    "@deepkit/core": "1.0.1-alpha.154",
+    "@deepkit/framework": "1.0.1-alpha.155",
+    "@deepkit/http": "1.0.1-alpha.155",
+    "@deepkit/injector": "1.0.1-alpha.155",
+    "@deepkit/logger": "1.0.1-alpha.155",
+    "@deepkit/stopwatch": "1.0.1-alpha.155",
+    "@deepkit/type": "1.0.1-alpha.155",
+    "@deepkit/workflow": "1.0.1-alpha.155",
     "@google-cloud/functions-framework": "3.4.2",
     "@hapi/hapi": "21.3.2",
     "@microsoft/api-documenter": "7.26.0",
